--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,11 +6,11 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds.min.js"></script> 
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 <script src="/js/theme.js"></script>
 <script src="/js/nav.js"></script> 
-<script src="/js/vanta-init.js"></script> 
+<script src="/js/particles-init.js"></script> 
 
 </body>
 
