--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="description" content="Personal website and portfolio for Alexandru Stoica - Software Engineer">
-        <meta name="keywords" content="Alexandru Stoica, portfolio, Stoica - Software Engineer, NodeJS, JavaScript">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>
-            <%= locals.pageTitle || 'Personal Website' %> | Alexandru Stoica
-        </title>
+    <meta name="description" content="Personal website and portfolio for Alexandru Stoica - Software Engineer">
+    <meta name="keywords" content="Alexandru Stoica, portfolio, Stoica - Software Engineer, NodeJS, JavaScript">
 
-        <link rel="icon" href="/images/favico.svg" type="image/svg+xml">
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
+    <title>
+        <%= locals.pageTitle || 'Personal Website' %> | Alexandru Stoica
+    </title>
 
-    <body>
-      <!-- <div id="vanta-bg"></div>  -->
+    <link rel="icon" href="/images/favico.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 
-        <div class="page-container">
-            <nav class="top-icon-nav">
-                <button id="hamburger-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
-                    <span class="hamburger-icon"></span>
-                </button>
+<body>
+    <div id="particles-js"></div>
 
-                <ul id="main-nav-list">
-                    <li><a href="/" aria-label="Home">
-                            Home
-                        </a></li>
-                    <li><a href="/#about" aria-label="About Me">
-                            About me
-                        </a></li>
-                    <li><a href="/blog" aria-label="Blog">
-                            Blog
-                        </a></li>
-                    <li><a href="/contact" aria-label="Contact">
-                            Contact
-                        </a></li>
+    <div class="page-container">
+        <nav class="top-icon-nav">
+            <button id="hamburger-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+                <span class="hamburger-icon"></span>
+            </button>
 
-                    <% if (locals.linkedinProfile) { %>
-                        <li class="nav-link-icon">
-                            <a href="<%= locals.linkedinProfile %>" target="_blank" aria-label="LinkedIn Profile">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
-                                    fill="currentColor" style="vertical-align: middle; position:relative; top: -1px;">
-                                    <path
-                                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
-                                </svg>
-                            </a>
-                        </li>
-                        <% } %>
+            <ul id="main-nav-list">
+                <li><a href="/" aria-label="Home">
+                        Home
+                    </a></li>
+                <li><a href="/blog" aria-label="Blog">
+                        Blog
+                    </a></li>
+                <li><a href="/contact" aria-label="Contact">
+                        Contact
+                    </a></li>
 
-                        <button id="theme-toggle" aria-label="Toggle theme">☀️</button>
-                </ul>
-            </nav>
+                <% if (locals.linkedinProfile) { %>
+                    <li class="nav-link-icon">
+                        <a href="<%= locals.linkedinProfile %>" target="_blank" aria-label="LinkedIn Profile">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="currentColor" style="vertical-align: middle; position:relative; top: -1px;">
+                                <path
+                                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                            </svg>
+                        </a>
+                    </li>
+                    <% } %>
+            </ul>
+            <button id="theme-toggle" aria-label="Toggle theme">☀️</button>
+        </nav>
