--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body class="<%= locals.currentTheme === 'dark' ? 'dark-mode' : '' %>">
     <div id="particles-js"></div>
 
     <div class="page-container">
