add SEO optimization

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,20 @@
 
 <script src="/js/theme.js"></script>
 <script src="/js/nav.js"></script> 
-<script src="/js/particles-init.js"></script> 
+<script src="/js/particles-init.js"></script>
+
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Alexandru Stoica",
+    "url": "alexandrustoica.dev",
+    "jobTitle": "Software Engineer",
+    "sameAs": [
+      "<%= locals.linkedinProfile %>"
+    ]
+  }
+</script>
 
 </body>
 
