--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
                 <div class="availability">
                     <span>•</span> Available for work
                 </div>
-                <h1>Alexandru Stoica</h1>
+                <h1 style="text-align: center;">Alexandru Stoica</h1>
                 <div class="avatar-container">
                     <img src="/images/profile-pic.jpeg" alt="Alexandru Stoica" class="avatar">
                 </div>
