--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+
 <script src="/js/theme.js"></script>
 <script src="/js/nav.js"></script>
 <script src="/js/particles-init.js"></script>
