--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
                 <div class="avatar-container">
                     <img src="/images/profile-pic.jpeg" alt="Alexandru Stoica" class="avatar">
                 </div>
-                <p class="role">Software Enginieer</p>
-                <p class="bio">Experienced software engineer specializing in full-stack development. Proven ability in
+                <p class="role">Software Engineer</p>
+                <p class="bio">Experienced in full-stack development. Proven ability in
                     modernizing systems, integrating APIs, and developing secure, scalable backend services used by
                     mases. Committed to continuous learning and contributing to impactful projects.</p>
 
