--- a/views/post-detail.ejs
+++ b/views/post-detail.ejs
@@ -17,15 +17,33 @@
                     </p>
                     <% } %>
 
-                        <div class="post-content" style="line-height: 1.7; margin-top: var(--spacing-lg);">
-                            <%- post.content %>
-                        </div>
+                        <% if(locals.encodedPostUrl) { %>
+                            <div class="share-buttons" style="margin-bottom: var(--spacing-lg);">
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=<%= locals.encodedPostUrl %>"
+                                    target="_blank" rel="noopener noreferrer" class="cta-button tertiary"
+                                    style="display: inline-flex; align-items: center; gap: var(--spacing-sm);">
+                                    <%# LinkedIn SVG Icon (replace with your preferred icon library if desired) %>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                            viewBox="0 0 24 24" fill="currentColor"
+                                            style="vertical-align: middle; position:relative; top: -1px;">
+                                            <path
+                                                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                                        </svg>
+                                        Share on LinkedIn
+                                </a>
+                            </div>
+                            <% } %>
 
-                        <hr style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
+                                <div class="post-content" style="line-height: 1.7; margin-top: var(--spacing-lg);">
+                                    <%- post.content %>
+                                </div>
 
-                        <%# Back link %>
-                            <a href="/blog" class="cta-button tertiary" style="margin-top: var(--spacing-lg);">&larr;
-                                Back to Blog List</a>
+                                <hr style="margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
+
+                                <%# Back link %>
+                                    <a href="/blog" class="cta-button tertiary"
+                                        style="margin-top: var(--spacing-lg);">&larr;
+                                        Back to Blog List</a>
 
             </article>
 
