--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,6 +49,9 @@
                 <li><a href="/blog" aria-label="Blog">
                         Blog
                     </a></li>
+                <li><a href="/reviews" aria-label="Reviews">
+                        Reviews
+                    </a></li>
                 <li><a href="/contact" aria-label="Contact">
                         Contact
                     </a></li>
