fix blog routing

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -30,7 +30,7 @@
                   </p>
                   <% } %>
 
-                    <a href="/blog/<%= post.id %>" class="cta-button tertiary blog-read-more"
+                    <a href="/blog/<%= post.slug %>" class="cta-button tertiary blog-read-more"
                       style="text-align: right; display: block;">
                       Read More &rarr;
                     </a>
